--- a/be/src/main/webapp/static/index.html
+++ b/be/src/main/webapp/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="nputest2015">
+<html ng-app="revision">
 <head>
 	<link rel="stylesheet" href="static/stylesheets/main.css" />
 	<link rel="stylesheet" href="static/lib/bootstrap/css/bootstrap.min.css" />
