--- a/fe/www/index.html
+++ b/fe/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/controllers/fiches-controller.js"></script>
     <script src="js/controllers/fiche-controller.js"></script>
     <script src="js/factories/data-factory.js"></script>
+    <script src="js/factories/remote-data-factory.js"></script>
 
   </head>
   <body ng-app="revision">
