--- a/fe/www/index.html
+++ b/fe/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/factories/remote-data-factory.js"></script>
     <script src="js/factories/global-config-factory.js"></script>
     <script src="js/controllers/main-controller.js"></script>
+    <script src="js/directives/ckeditor-directive.js"></script>
 
   </head>
   <body>
