--- a/fe/www/index.html
+++ b/fe/www/index.html
@@ -14,6 +14,7 @@
 
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.min.js"></script>
     <script src="cordova.js"></script>
     <script src="lib/underscore/underscore-min.js"></script>
     <script src="lib/ckeditor/ckeditor.js"></script>
@@ -26,6 +27,7 @@
     <script src="js/factories/remote-data-factory.js"></script>
     <script src="js/factories/global-config-factory.js"></script>
     <script src="js/controllers/main-controller.js"></script>
+    <script src="js/controllers/login-controller.js"></script>
 
   </head>
   <body>
