--- a/fe/www/index.html
+++ b/fe/www/index.html
@@ -8,10 +8,6 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-cookies/angular-cookies.min.js"></script>
@@ -32,12 +28,9 @@
   </head>
   <body>
 
-  <ion-nav-bar class="bar-positive">
-  </ion-nav-bar>
 
-  <ion-nav-view>
-  </ion-nav-view>
-
+  <ion-side-menus enable-menu-with-back-views="true" ng-include="'views/menu.html'" >
+  </ion-side-menus>
 
   </body>
 </html>
